--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
     .plateDisplay{
         margin-top: 100px;
+        overflow-y: auto;
     }
     .plate{
         background-color: black;
